Fix task title overflowing in detail view

--- a/src/styles/theme/form.scss
+++ b/src/styles/theme/form.scss
@@ -164,8 +164,8 @@
   background: transparent;
   border-color: transparent;
   margin: 0 .3em;
-  height: 1.5em;
-  padding: 0 .3em;
+  height: auto;
+  padding: .3em;
 
   &:focus {
     background: $input-background-color;
